# ds-pycontain

./: .buildinfo  .bumpversion.cfg  .pre-commit-config.yaml  DESCRIPTION.rst  MANIFEST.in  README.md  code_documentation.html  genindex.html  howtos.html  index.html  licenses.html  licenses_table.html  objects.inv  project_overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml  doumentation.yml  release.yml
_sources/: code_documentation.md.txt  index.rst.txt  licenses.rst.txt  licenses_table.rst.txt  project_overview.md.txt
_sources/api/: ds_pycontain.rst.txt
api/: ds_pycontain.html  modules.html
docs/: code_documentation.md  conf.py  index.rst  project_overview.md
docs/api/: ds_pycontain.rst  modules.rst
howtos/: setup_dev_env.html
src/ds_pycontain/: __init__.py  docker_containers.py  python_dockerized_repl.py
src/ds_pycontain/data/: python_runner.py
tests/: test_ds_pycontain.py  test_python_docerized_repl.py
