[metadata]
name = ds_pycontain
# do not change version by hand: use bump_version.sh
version = file: src/ds_pycontain/VERSION
description = "deepsense.ai wrapper around docker python API"
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
author = deepsense.ai
author_email = contact@deepsense.ai
license = MIT License (MIT)
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: MIT License (MIT)
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    =src
packages=find:
zip_safe = True
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    docker>=6.1.3

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
